# universal-knowledge-framework

./: .gitignore  BEST_PRACTICES.md  CHANGELOG.md  ISSUES_CREATED.md  ISSUES_TO_CREATE.md  ISSUE_TEMPLATE.md  LICENSE  MANIFEST.in  PUBLISHING.md  PULL_REQUEST_TEMPLATE.md  README.md  SETUP_GUIDE.md  UPDATE_GUIDE.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs_and_sync.yml
docs/: KNOWLEDGE_COMPRESSION.md  claude-code-integration.md
examples/: claude_code_sync_example.py
project_templates/business/: UPDATE_GUIDE.md
src/universal_knowledge/: __init__.py  ai_commands.py  ai_migration.py  cli.py
src/universal_knowledge/ai/: __init__.py  auto_updater.py  claude_code_sync.py  claude_manager.py  pattern_learner.py  session_tracker.py
src/universal_knowledge/core/: __init__.py  analytics.py  bridge.py  compressor.py  git_utils.py  manager.py  obsidian_adapter.py  project.py  task.py  updater.py
src/universal_knowledge/templates/: __init__.py  dynamic_engine.py  template_manager.py
src/universal_knowledge/templates/base_templates/: data-science_session_ja_markdown.jinja2  default.jinja2  meeting_ja_markdown.jinja2  metadata.json  planning_ja_markdown.jinja2  session_en_markdown.jinja2  session_ja_markdown.jinja2  web-development_session_ja_markdown.jinja2
src/universal_knowledge/templates/custom_templates/: general_meeting.jinja2  imported_template.jinja2  react_session.jinja2  test_template.jinja2  web_template.jinja2
src/universal_knowledge/utils/: __init__.py  claude2md.py
tests/: conftest.py  test_analytics.py  test_claude2md.py  test_claude_code_sync.py  test_git_utils.py  test_knowledge_compression.py  test_template_engine.py
