[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-knowledge-framework"
version = "1.0.0"
description = "あらゆるプロジェクトで利用可能な汎用ナレッジ管理フレームワーク"
readme = "README.md"
license = "MIT"
authors = [
    {name = "株式会社CGin財 (CGin-Zai Co., Ltd.)"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
keywords = ["知識管理", "文書管理", "Claude", "Obsidian", "プロジェクト管理", "テンプレート"]
dependencies = [
    "click>=8.0.0",
    "gitpython>=3.1.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
    "pathlib2>=2.3.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]
ai = [
    "openai>=1.0.0",
    "sentence-transformers>=2.0.0",
    "numpy>=1.20.0",
]

[project.scripts]
ukf = "universal_knowledge.cli:main"

[project.urls]
Homepage = "https://github.com/cginzai/universal-knowledge-framework"
Repository = "https://github.com/cginzai/universal-knowledge-framework"
Issues = "https://github.com/cginzai/universal-knowledge-framework/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
universal_knowledge = ["templates/**/*"]